--- a/.gitignore
+++ b/.gitignore
@@ -36,7 +36,7 @@ Carthage
 # Note: if you ignore the Pods directory, make sure to uncomment
 # `pod install` in .travis.yml
 #
-# Pods/
+Pods/
 =======
 
 ## Other
