Updating CI script

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,3 +12,4 @@ language: objective-c
 script:
 - set -o pipefail && xcodebuild test -workspace Example/MarkdownKit.xcworkspace -scheme MarkdownKit-Example -sdk iphonesimulator9.3 ONLY_ACTIVE_ARCH=NO | xcpretty
 - pod lib lint
+- swift build
