--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,6 @@ language: objective-c
 # - gem install cocoapods # Since Travis is not always on latest version
 # - pod install --project-directory=Example
 script:
-- set -o pipefail && xcodebuild test -workspace MarkdownKit.xcworkspace -scheme MarkdownKit-Example -sdk iphonesimulator13.0 ONLY_ACTIVE_ARCH=NO | xcpretty
+- set -o pipefail && xcodebuild test -workspace MarkdownKit.xcworkspace -scheme Example -sdk iphonesimulator13.0 ONLY_ACTIVE_ARCH=NO | xcpretty
 - pod lib lint
 - swift build
