--- a/MarkdownKit.xcodeproj/xcshareddata/xcschemes/MarkdownKit macOS.xcscheme
+++ b/MarkdownKit.xcodeproj/xcshareddata/xcschemes/MarkdownKit macOS.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "1130"
+   LastUpgradeVersion = "1240"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -14,9 +14,9 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "B62C1BFE21EF7EED00308C8C"
-               BuildableName = "MarkdownKit.framework"
-               BlueprintName = "MarkdownKit"
+               BlueprintIdentifier = "B64AF6132203402F0048439D"
+               BuildableName = "MarkdownKit macOS.framework"
+               BlueprintName = "MarkdownKit macOS"
                ReferencedContainer = "container:MarkdownKit.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -27,26 +27,7 @@
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
-      <MacroExpansion>
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "B62C1BFE21EF7EED00308C8C"
-            BuildableName = "MarkdownKit.framework"
-            BlueprintName = "MarkdownKit"
-            ReferencedContainer = "container:MarkdownKit.xcodeproj">
-         </BuildableReference>
-      </MacroExpansion>
       <Testables>
-         <TestableReference
-            skipped = "NO">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "B62C1C0621EF7EED00308C8C"
-               BuildableName = "MarkdownKitTests.xctest"
-               BlueprintName = "MarkdownKitTests"
-               ReferencedContainer = "container:MarkdownKit.xcodeproj">
-            </BuildableReference>
-         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
@@ -62,9 +43,9 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "B62C1BFE21EF7EED00308C8C"
-            BuildableName = "MarkdownKit.framework"
-            BlueprintName = "MarkdownKit"
+            BlueprintIdentifier = "B64AF6132203402F0048439D"
+            BuildableName = "MarkdownKit macOS.framework"
+            BlueprintName = "MarkdownKit macOS"
             ReferencedContainer = "container:MarkdownKit.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -78,9 +59,9 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "B62C1BFE21EF7EED00308C8C"
-            BuildableName = "MarkdownKit.framework"
-            BlueprintName = "MarkdownKit"
+            BlueprintIdentifier = "B64AF6132203402F0048439D"
+            BuildableName = "MarkdownKit macOS.framework"
+            BlueprintName = "MarkdownKit macOS"
             ReferencedContainer = "container:MarkdownKit.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
