--- a/MarkdownKit.xcodeproj/xcshareddata/xcschemes/MarkdownKit iOS.xcscheme
+++ b/MarkdownKit.xcodeproj/xcshareddata/xcschemes/MarkdownKit iOS.xcscheme
@@ -16,7 +16,7 @@
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "B62C1BFE21EF7EED00308C8C"
                BuildableName = "MarkdownKit.framework"
-               BlueprintName = "MarkdownKit"
+               BlueprintName = "MarkdownKit iOS"
                ReferencedContainer = "container:MarkdownKit.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -32,7 +32,7 @@
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "B62C1BFE21EF7EED00308C8C"
             BuildableName = "MarkdownKit.framework"
-            BlueprintName = "MarkdownKit"
+            BlueprintName = "MarkdownKit iOS"
             ReferencedContainer = "container:MarkdownKit.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -64,7 +64,7 @@
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "B62C1BFE21EF7EED00308C8C"
             BuildableName = "MarkdownKit.framework"
-            BlueprintName = "MarkdownKit"
+            BlueprintName = "MarkdownKit iOS"
             ReferencedContainer = "container:MarkdownKit.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -80,7 +80,7 @@
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "B62C1BFE21EF7EED00308C8C"
             BuildableName = "MarkdownKit.framework"
-            BlueprintName = "MarkdownKit"
+            BlueprintName = "MarkdownKit iOS"
             ReferencedContainer = "container:MarkdownKit.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
