--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -2,7 +2,9 @@ name: CI
 
 on:
   pull_request:
-    branches: [ master ]
+    types: [opened, reopened, edited, synchronize]
+    branches:
+      - master
 
 jobs:
   check:
