--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -21,10 +21,9 @@ jobs:
         run: swift test
       - name: Test iOS
         run: |
-         mkdir iosTest && cd iosTest
-         swift package generate-xcodeproj
+         swift package generate-xcodeproj --output temp && cd temp
          xcodebuild build -sdk iphoneos -scheme 'MarkdownKit-Package'
          xcodebuild test -destination 'name=iPhone 12' -scheme 'MarkdownKit-Package'
-         cd .. / rm -r iosTest
+         cd .. && rm -r temp
       - name: Lint pod
         run: pod lib lint
