--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -24,6 +24,6 @@ jobs:
       - name: Build & test iOS
         run: |
          swift package generate-xcodeproj --output temp && cd temp
-         xcodebuild build -sdk iphoneos -scheme 'MarkdownKit-Package'
-         xcodebuild test -destination 'name=iPhone 16' -scheme 'MarkdownKit-Package'
+         xcodebuild build -sdk iphoneos -scheme 'MarkdownKit iOS'
+         xcodebuild test -destination 'name=iPhone 16' -scheme 'MarkdownKit iOS'
          cd .. && rm -r temp
